--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@prettier/plugin-php": "^0.19.4",
+        "prettier": "^2.8.5"
     }
 }
